adjust map sidebar height to prevent cutoff content

--- a/src/assets/scss/app-theme/_map.scss
+++ b/src/assets/scss/app-theme/_map.scss
@@ -166,16 +166,12 @@
 /*  Map Sidebar */
 
 .map-sidebar {
-  height: 77vh;
   box-shadow: none;
   padding-left: 15px;
   position: relative;
   right: 0;
   transition-duration: .16s;
-  z-index: 2;
-  @media(min-width: 992px) {
-    box-shadow: -2px -1px 4px rgba(0, 0, 0, 0.2);
-  }
+  z-index: 2;  
 
   .btn-toggle {
     border: none;
